--- a/index.html
+++ b/index.html
@@ -1,33 +1,50 @@
-HTML CSS BabelResult
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+<!DOCTYPE html>
+<html lang="en">
 
-<!-- User Story #6: My portfolio should have a navbar with an id of navbar.
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <title>Test page</title>
+
+  <!-- import the webpage's stylesheet -->
+  <link rel="stylesheet" href="/style.css" />
+
+</head>
+
+<body>
+  <main>
+
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+
+    <!-- User Story #6: My portfolio should have a navbar with an id of navbar.
  User Story #7: The navbar should contain at least one link that I can click on to navigate to different sections of the page.-->
-<nav id="navbar"> <a href="#projects">Projects</a></nav>
+    <nav id="navbar"> <a href="#projects">Projects</a></nav>
 
-  <!--User Story #1: My portfolio should have a welcome section with an id of welcome-section.
+    <!--User Story #1: My portfolio should have a welcome section with an id of welcome-section.
 -->
-  <div id="welcome-section">
+    <div id="welcome-section">
 
-    <!-- User Story #2: The welcome section should have an h1 element that contains text. -->
-    <h1>M. McKenzie</h1>
-    <h2>Occasional Coder</h2>
-  </div>
-
-  <!--User Story #3: My portfolio should have a projects section with an id of projects. 
- -->
-  <div id="projects">
-
-    <!-- User Story #4: The projects section should contain at least one element with a class of project-tile to hold a project. -->
-    <div class="project-tile">
-      
-
-      <!--User Story #5: The projects section should contain at least one link to a project.  --><a href="https://codepen.io/codecafecentral/pen/XWbNaxp">project link</a>
-      
+      <!-- User Story #2: The welcome section should have an h1 element that contains text. -->
+      <h1>M. McKenzie</h1>
+      <h2>Occasional Coder</h2>
     </div>
-  </div>
 
-  <!-- User Story #8: My portfolio should have a link with an id of profile-link, which opens my GitHub or FCC profile in a new tab. -->
-  <a href="https://github.com/memckenzie2" id="profile-link" target="_blank"><i class="fab fa-github-alt"></i>Github</a>
+    <!--User Story #3: My portfolio should have a projects section with an id of projects. 
+ -->
+    <div id="projects">
 
+      <!-- User Story #4: The projects section should contain at least one element with a class of project-tile to hold a project. -->
+      <div class="project-tile">
 
+        <!--User Story #5: The projects section should contain at least one link to a project.  --><a href="https://codepen.io/codecafecentral/pen/XWbNaxp">project link</a>
+
+      </div>
+    </div>
+
+    <!-- User Story #8: My portfolio should have a link with an id of profile-link, which opens my GitHub or FCC profile in a new tab. -->
+    <a href="https://github.com/memckenzie2" id="profile-link" target="_blank"><i class="fab fa-github-alt"></i>Github</a>
+
+</body>
+</main>
