--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Test page</title>
 
   <!-- import the webpage's stylesheet -->
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="test_pages/style.css" />
 
 </head>
 
