--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Test page</title>
 
   <!-- import the webpage's stylesheet -->
-  <link rel="stylesheet" href="https://github.com/CodeCafeCentral/test_pages/blob/master/styles/style.css" />
+  <link rel="stylesheet" href="/styles/style.css" />
 
 </head>
 
